# gohan

./: Cargo.toml
bento/: Cargo.toml  README.md
bento/src/: builder.rs  error.rs  lib.rs
bento/src/exec/bentoinspect/: README.md  bin.rs
bento/src/exec/bentosc/: README.md  bin.rs
bento/tests/: builder.rs  cli.rs  compiler.rs  pipeline.rs  shaders.rs
bento/tests/fixtures/: define_workgroup.glsl  hlsl_binding_map.hlsl  hlsl_binding_order.hlsl  scene_cull.comp.glsl  simple_compute.glsl  simple_compute.slang  simple_vertex.glsl  slang_binding_map.slang  slang_binding_order.slang  slang_vulkan_attrs.slang
furikake/: Cargo.toml
furikake/examples/bindful_reserved/: README.md  main.rs
furikake/examples/bindless_reserved/: README.md  main.rs
furikake/examples/usage/: README.md  main.rs
furikake/src/: error.rs  lib.rs  types.rs
furikake/src/recipe/: mod.rs
furikake/src/reservations/: bindless_animation_keyframes.rs  bindless_animation_tracks.rs  bindless_animations.rs  bindless_camera.rs  bindless_indices.rs  bindless_joints.rs  bindless_lights.rs  bindless_materials.rs  bindless_per_obj.rs  bindless_skeletons.rs  bindless_skinning.rs  bindless_textures.rs  bindless_transformations.rs  bindless_vertices.rs  camera.rs  dirty.rs  mod.rs  particles.rs  per_obj_joints.rs  timing.rs
furikake/src/resolver/: mod.rs
furikake/tests/: bindless_state_mutations.rs
miso/: Cargo.toml
miso/examples/: print_shader_metadata.rs
miso/src/: lib.rs
miso/src/slang/include/: bindless.slang  bindless_deferred_combine.slang  bindless_draw.slang  bindless_draw_gpu.slang  handle.slang  lights.slang  miso.slang  particle.slang
miso/src/slang/src/: gpudeferred_frag.slang  gpudeferred_vert.slang  gpuforward_frag.slang  gpuforward_vert.slang  stdbillboard_frag.slang  stdbillboard_vert.slang  stddeferred_combine_frag.slang  stddeferred_combine_vert.slang  stdforward_frag.slang  stdforward_vert.slang  stdfrag.slang  stdocean_frag.slang  stdocean_vert.slang  stdparticle_frag.slang  stdparticle_vert.slang  stdsky_frag.slang  stdsky_vert.slang  stdvert.slang
miso/test/: README.md
slang-rs/: Cargo.toml  build.rs
slang-rs/shader-slang-sys/: Cargo.toml  build.rs
slang-rs/shader-slang-sys/src/: lib.rs
slang-rs/src/: lib.rs
tare/: Cargo.toml
tare/examples/: compute_pass.rs  render_graph.rs
tare/src/: lib.rs
tare/src/graph/: mod.rs
tare/src/transient/: mod.rs
tare/src/utils/: error.rs  mod.rs  staged_buffer.rs  thread_pool.rs
tare/tests/: compute_pass.rs  render_graph_headless.rs  transient_allocator.rs
