[package]
name = "bento"
version = "0.1.0"
edition = "2024"

[dependencies]
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
shaderc = "0.8"
rspirv-reflect = "0.9"
rspirv = "0.12"
regex = "1"
clap = { version = "4.5", features = ["derive"] }
slang-rs = { path = "../slang-rs" }

[lib]


[[bin]]
name = "bentoinspect"
path = "src/exec/bentoinspect/bin.rs"


[[bin]]
name = "bentosc"
path = "src/exec/bentosc/bin.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
ash = "0.37"
serial_test = "3"
