[package]
name = "furikake"
version = "0.1.0"
edition = "2024"


[dependencies]
glam = "0.24.0"  # For vector math (Vec2 and Vec3)
dashi = {git = "https://github.com/JordanHendl/dashi"}
bento = {path = "../bento"}
tare = {path = "../tare"}

[dev-dependencies]
rand = "0.8"
tempfile = "3"
inline-spirv = "0.2.1"

[lib]
